# cook-book

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recipeadd.cpp  recipeadd.h  recipeadd.ui  recipecard.cpp  recipecard.h  recipecard.ui  recipedetailwindow.cpp  recipedetailwindow.h  recipedetailwindow.ui  recipeimages.qrc
